# AIVT

./: .gitignore  AGENTS.md  Makefile  README.md  REVIEW.md  execplan.md  mkdocs.yml  temp_patch.ps1  temp_patch.txt
kitsu-telemetry/: .env.example  AGENTS.md  README.md  RUN_FIRST.md  fail_log.txt  pyproject.toml  telemetry.db  telemetry_tmp.db
kitsu-telemetry/.github/workflows/: windows-ci.yml
kitsu-telemetry/api/: log_reader.py  main.py  storage.py
kitsu-telemetry/tests/: test_api.py  test_log_reader.py
kitsu-telemetry/ui/: .env.example  .env.local  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tsconfig.json  vitest.config.ts
kitsu-telemetry/ui/src/lib/: LatencyChart.svelte  StatusBadge.svelte  api.ts  types.ts  ws.spec.ts  ws.ts
kitsu-telemetry/ui/src/routes/: +page.svelte
kitsu-telemetry/ui/src/test/: env-dynamic-public.ts  env-static-public.ts
kitsu-vtuber-ai/: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  RUN_FIRST.md  memory.sqlite3  pyproject.toml
kitsu-vtuber-ai/.github/workflows/: lint.yml  windows-ci.yml
kitsu-vtuber-ai/apps/asr_worker/: __init__.py  audio.py  audio.py.bak  config.py  devices.py  logger.py  main.py  metrics.py  orchestrator.py  pipeline.py  pipeline.py.bak  runner.py  runner.py.bak  transcription.py  utils.py  vad.py
kitsu-vtuber-ai/apps/avatar_controller/: main.py
kitsu-vtuber-ai/apps/control_panel_backend/: main.py  ollama.py
kitsu-vtuber-ai/apps/obs_controller/: main.py
kitsu-vtuber-ai/apps/orchestrator/: broker.py  decision_engine.py  deps.py  event_dispatcher.py  main.py  metrics.py  schemas.py  state.py  state_manager.py  telemetry.py
kitsu-vtuber-ai/apps/orchestrator/routes/: __init__.py  chat.py  control.py  events.py  integrations.py  persona.py  system.py  tts.py  webui.py
kitsu-vtuber-ai/apps/orchestrator/webui/: chat.html  overlay.html
kitsu-vtuber-ai/apps/pipeline_runner/: __init__.py  main.py  utils.py
kitsu-vtuber-ai/apps/policy_worker/: main.py  main.py.orig_backup
kitsu-vtuber-ai/apps/soak_harness/: __init__.py  main.py
kitsu-vtuber-ai/apps/tts_worker/: main.py  service.py
kitsu-vtuber-ai/apps/twitch_ingest/: main.py
kitsu-vtuber-ai/config/: kitsu.example.yaml  pipeline.debug.env
kitsu-vtuber-ai/configs/safety/: __init__.py  blocklist_post.txt  blocklist_pre.txt  fallbacks.json
kitsu-vtuber-ai/data/: memory.sqlite3  memory_history.json
kitsu-vtuber-ai/examples/: quick_conversation.py
kitsu-vtuber-ai/libs/cache/: ttl.py
kitsu-vtuber-ai/libs/clients/: __init__.py  orchestrator.py
kitsu-vtuber-ai/libs/common/: __init__.py  logging.py
kitsu-vtuber-ai/libs/compat/: __init__.py  tenacity_shim.py
kitsu-vtuber-ai/libs/config/: __init__.py  loader.py  models.py
kitsu-vtuber-ai/libs/contracts/: __init__.py  asr.py  control.py  policy.py  tts.py
kitsu-vtuber-ai/libs/memory/: __init__.py  controller.py  ring_buffer.py  storage.py  summarizer.py
kitsu-vtuber-ai/libs/monitoring/: resource.py
kitsu-vtuber-ai/libs/safety/: __init__.py  moderation.py
kitsu-vtuber-ai/libs/telemetry/: __init__.py  gpu.py
kitsu-vtuber-ai/scripts/: asr_mic_tester.py  dev_env.ps1  dev_supervisor.py  package_release.ps1  refresh_twitch_token.py  run_all.ps1  run_all_no_docker.ps1  run_asr.ps1  run_obs.ps1  run_orchestrator.ps1  run_pipeline.ps1  run_policy.ps1  run_tts.ps1  run_twitch.ps1  run_vts.ps1  service_manager.ps1
kitsu-vtuber-ai/tenacity/: __init__.py
kitsu-vtuber-ai/tests/: test_acceptance_criteria.py  test_asr_mic_tester.py  test_asr_pipeline.py  test_asr_stub.py  test_asr_worker.py  test_avatar_controller.py  test_config_loader.py  test_control_panel_backend.py  test_e2e_pipeline.py  test_gpu_monitor.py  test_integration_asr_orchestrator.py  test_logging.py  test_memory.py  test_obs_controller.py  test_orchestrator.py  test_orchestrator_asr_events.py  test_orchestrator_stub.py  test_pipeline_runner.py  test_policy_stub.py  test_policy_worker.py  test_safety.py  test_soak_harness.py  test_telemetry_client.py  test_telemetry_integration.py  test_tts_worker.py  test_twitch_ingest.py
kitsu-vtuber-ai/tests/apps/obs_controller/: test_obs_controller.py
kitsu-vtuber-ai/tests/apps/orchestrator/: test_control_endpoints.py  utils.py  (+1 more)
(+12 files in other folders)
