[tool.poetry]
name = "kitsu-telemetry"
version = "0.1.0"
description = "Telemetry API and dashboard for the Kitsu.exe VTuber stack"
authors = ["Kitsu Team <devs@example.com>"]
readme = "README.md"
packages = [
    { include = "api" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
aiosqlite = "^0.19.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^0.23.8"
ruff = "^0.4.7"
black = "^24.4.2"
mypy = "^1.10.0"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
