[project]
name = "kitsu-vtuber-ai"
version = "0.1.0"
description = "Core services for the Kitsu.exe VTuber AI pipeline"
readme = "README.md"
authors = [{ name = "Kitsu Team", email = "devs@example.com" }]
requires-python = ">=3.11,<3.12"

# ✅ DEPENDÊNCIAS: array de strings PEP 508 (não tabela)
dependencies = [
  "aiosqlite>=0.19.0,<1.0.0",
  "fastapi>=0.110.0,<1.0.0",
  "faster-whisper>=1.0.0,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "numpy>=1.26.4,<3.0.0",
  "obsws-python>=1.7.2,<2.0.0",
  "pyaudio>=0.2.14,<0.3.0",
  "pynvml>=11.5.0,<12.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "sounddevice>=0.4.7,<0.5.0",
  "tenacity>=8.2.3,<9.0.0",
  "twitchio>=2.9.1,<3.0.0",
  "TTS>=0.22.0,<1.0.0",
  "uvicorn[standard]>=0.29.0,<1.0.0",
]

[tool.poetry]
# Só o que é específico do Poetry
packages = [
  { include = "apps" },
  { include = "libs" },
  { include = "configs" }
]

# Você pode manter o grupo de dev no namespace do Poetry
[tool.poetry.group.dev.dependencies]
black = ">=24.4.2,<25.0.0"
isort = ">=5.13.2,<6.0.0"
mypy = ">=1.10.0,<2.0.0"
pre-commit = ">=3.7.0,<4.0.0"
pytest = ">=8.4.2,<9.0.0"
pytest-asyncio = ">=0.23.8,<1.0.0"
ruff = ">=0.4.7,<1.0.0"

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
