[project]
name = "kitsu-vtuber-ai"
version = "0.1.0"
description = "Core services for the Kitsu.exe VTuber AI pipeline"
readme = "README.md"
authors = [{ name = "Kitsu Team", email = "devs@example.com" }]
requires-python = ">=3.11,<3.12"

[tool.poetry]
# Só o que é específico do Poetry
packages = [
  { include = "apps" },
  { include = "libs" },
  { include = "configs" }
]

# Você pode manter o grupo de dev no namespace do Poetry
[tool.poetry.group.dev.dependencies]
black = ">=24.4.2,<25.0.0"
isort = ">=5.13.2,<6.0.0"
mypy = ">=1.10.0,<2.0.0"
pre-commit = ">=3.7.0,<4.0.0"
pytest = ">=8.4.2,<9.0.0"
pytest-asyncio = ">=0.23.8,<1.0.0"
ruff = ">=0.4.7,<1.0.0"


[tool.poetry.dependencies]
httpx = "^0.28.1"
aiosqlite = "^0.21.0"
[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
