[tool.poetry]
name = "kitsu-vtuber-ai"
version = "0.1.0"
description = "Core services for the Kitsu.exe VTuber AI pipeline"
authors = ["Kitsu Team <devs@example.com>"]
readme = "README.md"
packages = [
  { include = "apps" },
  { include = "libs" },
  { include = "configs" }
]

# You can keep the dev group within the Poetry namespace
[tool.poetry.group.dev.dependencies]
black = ">=24.4.2,<25.0.0"
isort = ">=5.13.2,<6.0.0"
mypy = ">=1.10.0,<2.0.0"
pre-commit = ">=3.7.0,<4.0.0"
pytest = ">=8.4.2,<9.0.0"
pytest-asyncio = ">=0.23.8,<1.0.0"
ruff = ">=0.4.7,<1.0.0"
deptry = "^0.23.1"


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
httpx = "^0.28.1"
aiosqlite = "^0.21.0"
websockets = "^15.0.1"
fastapi = "^0.119.0"
pydantic = "^2.12.1"
python-dotenv = "^1.0.1"
obsws-python = "^1.8.0"
tenacity = "^9.1.2"
uvicorn = "^0.37.0"
tts = "^0.22.0"
twitchio = "^3.1.0"
pynvml = "^13.0.1"
faster-whisper = "^1.2.0"
[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
